Bug 181024 - kate crashes when clicking on "find in files" in the keyboard shortcuts dialog
Summary: kate crashes when clicking on "find in files" in the keyboard shortcuts dialog
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-16 22:44 UTC by Peter Szabados
Modified: 2009-05-20 02:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Szabados 2009-01-16 22:44:47 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Steps to reproduce bug:
- make sure that "find in files" module is enabled
- open "keyboard shortcuts" dialog
- click on any item (except "find in files")
- click on the "find in files" item
Here, Kate crashes with a SIGABRT

I tried clicking around randomly in the keyboard shortcuts dialog, and I also tried clicking on items in different modules, but the crash only comes in this item.


Alkalmazás: Kate (kate), szignál: SIGABRT

Thread 1 (Thread 0xb5bb06c0 (LWP 24607)):
[KCrash Handler]
#6  0xb805f430 in __kernel_vsyscall ()
#7  0xb67a0880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb67a2248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb6a46795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb6a46872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb6a46915 in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb7ab5b33 in ?? () from /usr/lib/libkdeui.so.5
#13 0xb7ac05fc in ?? () from /usr/lib/libkdeui.so.5
#14 0xb6b53a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0xb6b547e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xb74c86a3 in QAbstractItemView::clicked () from /usr/lib/libQtGui.so.4
#17 0xb74d58b5 in QAbstractItemView::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#18 0xb750f794 in QTreeView::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#19 0xb705e962 in QWidget::event () from /usr/lib/libQtGui.so.4
#20 0xb7395fd3 in QFrame::event () from /usr/lib/libQtGui.so.4
#21 0xb742c7df in QAbstractScrollArea::viewportEvent () from /usr/lib/libQtGui.so.4
#22 0xb74d7ccf in QAbstractItemView::viewportEvent () from /usr/lib/libQtGui.so.4
#23 0xb750f9e4 in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#24 0xb742ed85 in ?? () from /usr/lib/libQtGui.so.4
#25 0xb6b3e04a in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#26 0xb70068ca in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#27 0xb700f0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#28 0xb7b2704d in KApplication::notify () from /usr/lib/libkdeui.so.5
#29 0xb6b3ee61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#30 0xb700e36e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#31 0xb7078656 in ?? () from /usr/lib/libQtGui.so.4
#32 0xb70779e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#33 0xb70a17aa in ?? () from /usr/lib/libQtGui.so.4
#34 0xb5fad6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#35 0xb5fb0da3 in ?? () from /usr/lib/libglib-2.0.so.0
#36 0xb5fb0f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#37 0xb6b69478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#38 0xb70a0ea5 in ?? () from /usr/lib/libQtGui.so.4
#39 0xb6b3d52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#40 0xb6b3d6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#41 0xb7473987 in QDialog::exec () from /usr/lib/libQtGui.so.4
#42 0xb7ac07b9 in KShortcutsDialog::configure () from /usr/lib/libkdeui.so.5
#43 0xb7fd9b46 in ?? () from /usr/lib/libkateinterfaces.so.4
#44 0xb7fe1d68 in ?? () from /usr/lib/libkateinterfaces.so.4
#45 0xb6b53a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#46 0xb6b53e60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#47 0xb70005f1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#48 0xb7000f5f in QAction::activate () from /usr/lib/libQtGui.so.4
#49 0xb73de564 in ?? () from /usr/lib/libQtGui.so.4
#50 0xb73deff2 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#51 0xb7c14065 in KMenu::mouseReleaseEvent () from /usr/lib/libkdeui.so.5
#52 0xb705e962 in QWidget::event () from /usr/lib/libQtGui.so.4
#53 0xb73e12e9 in QMenu::event () from /usr/lib/libQtGui.so.4
#54 0xb70068ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#55 0xb700f0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#56 0xb7b2704d in KApplication::notify () from /usr/lib/libkdeui.so.5
#57 0xb6b3ee61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#58 0xb700e36e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#59 0xb70788de in ?? () from /usr/lib/libQtGui.so.4
#60 0xb70779e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#61 0xb70a17aa in ?? () from /usr/lib/libQtGui.so.4
#62 0xb5fad6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#63 0xb5fb0da3 in ?? () from /usr/lib/libglib-2.0.so.0
#64 0xb5fb0f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#65 0xb6b69478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#66 0xb70a0ea5 in ?? () from /usr/lib/libQtGui.so.4
#67 0xb6b3d52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#68 0xb6b3d6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#69 0xb6b3fda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#70 0xb7006767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#71 0xb802577d in kdemain () from /usr/lib/libkdeinit4_kate.so
#72 0x08048672 in _start ()
Comment 1 Dario Andres 2009-01-17 00:21:33 UTC
Important things:
What KDE version (or SVN revision) are you using?
May you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? Thanks :)
Comment 2 Dario Andres 2009-01-17 01:00:56 UTC
Well:
I've been able to reproduce the crash using:

Qt: 4.4.3 + qt-copy-patches-910240
KDE: 4.2.60 (KDE 4.2.60 (KDE 4.3 >= 20090106))
kdelibs svn rev. 911862 / kdebase svn rev. 911862
kdesdk svn rev. 905676 (a bit old)
on ArchLinux x86_64 - Kernel 2.6.28

Backtrace:

Application: Kate (kate), signal SIGABRT
0x00007f731bcf8fd0 in __nanosleep_nocancel () from /lib/libc.so.6

Thread 1 (Thread 0x7f731f88a750 (LWP 5203)):
[KCrash Handler]
#5  0x00007f731bc8c0c5 in raise () from /lib/libc.so.6
#6  0x00007f731bc8d5e3 in abort () from /lib/libc.so.6
#7  0x00007f731c9c50a5 in qt_message_output () from /usr/lib/libQtCore.so.4
#8  0x00007f731c9c51c7 in qFatal () from /usr/lib/libQtCore.so.4
#9  0x00007f731e78d425 in KShortcutsEditorDelegate::itemActivated (this=0x1b604b0, index={r = 664585104, c = 32767, p = 0x7fff279cc190, m = 0xffffffff})
    at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/dialogs/kshortcutseditordelegate.cpp:156
#10 0x00007f731e797789 in KShortcutsEditorDelegate::qt_metacall (this=0x1b604b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff279cc4c0)
    at /home/kde-devel/kde/build/KDE/kdelibs/kdeui/kshortcutsdialog_p.moc:84
#11 0x00007f731caaed30 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#12 0x00007f731d9db005 in QAbstractItemView::clicked () from /usr/lib/libQtGui.so.4
#13 0x00007f731d9e752e in QAbstractItemView::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#14 0x00007f731d6275ec in QWidget::event () from /usr/lib/libQtGui.so.4
#15 0x00007f731d9e7ded in QAbstractItemView::viewportEvent () from /usr/lib/libQtGui.so.4
#16 0x00007f731da194bc in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#17 0x00007f731ca9c6f8 in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#18 0x00007f731d5da4bc in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#19 0x00007f731d5e10fe in QApplication::notify () from /usr/lib/libQtGui.so.4
#20 0x00007f731e7f663b in KApplication::notify (this=0x7fff279cfac0, receiver=0x1a14d90, event=0x7fff279cd340) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#21 0x00007f731ca9d401 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#22 0x00007f731d5e24a8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#23 0x00007f731d638b6c in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007f731d637ce9 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#25 0x00007f731d65b794 in ?? () from /usr/lib/libQtGui.so.4
#26 0x00007f7317654aa2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#27 0x00007f731765821d in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#28 0x00007f73176583db in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#29 0x00007f731cac18cf in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#30 0x00007f731d65b04f in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007f731ca9bd72 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#32 0x00007f731ca9bf05 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#33 0x00007f731d995b3f in QDialog::exec () from /usr/lib/libQtGui.so.4
#34 0x00007f731e7978bd in KShortcutsDialog::configure (this=0x1453, saveSettings=83) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/dialogs/kshortcutsdialog.cpp:150
#35 0x00007f731f35f512 in KateMainWindow::editKeys (this=0x17ac8f8) at /home/kde-devel/kde/src/KDE/kdesdk/kate/app/katemainwindow.cpp:694
#36 0x00007f731f366c05 in KateMainWindow::qt_metacall (this=0x15a2d50, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff279ce1e0)
    at /home/kde-devel/kde/build/KDE/kdesdk/kate/app/katemainwindow.moc:169
#37 0x00007f731caaed30 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#38 0x00007f731d5d5367 in QAction::triggered () from /usr/lib/libQtGui.so.4
#39 0x00007f731d5d5b24 in QAction::activate () from /usr/lib/libQtGui.so.4
#40 0x00007f731d91b203 in ?? () from /usr/lib/libQtGui.so.4
#41 0x00007f731e8cc701 in KMenu::mouseReleaseEvent (this=0x1704ef0, e=0x7fff279cedb0) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/widgets/kmenu.cpp:454
#42 0x00007f731d6275ec in QWidget::event () from /usr/lib/libQtGui.so.4
#43 0x00007f731d91c72b in QMenu::event () from /usr/lib/libQtGui.so.4
#44 0x00007f731d5da4ed in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#45 0x00007f731d5e10fe in QApplication::notify () from /usr/lib/libQtGui.so.4
#46 0x00007f731e7f663b in KApplication::notify (this=0x7fff279cfac0, receiver=0x1704ef0, event=0x7fff279cedb0) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#47 0x00007f731ca9d401 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#48 0x00007f731d5e24a8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#49 0x00007f731d638d1b in ?? () from /usr/lib/libQtGui.so.4
#50 0x00007f731d637ce9 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#51 0x00007f731d65b794 in ?? () from /usr/lib/libQtGui.so.4
#52 0x00007f7317654aa2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#53 0x00007f731765821d in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#54 0x00007f73176583db in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#55 0x00007f731cac18cf in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#56 0x00007f731d65b04f in ?? () from /usr/lib/libQtGui.so.4
#57 0x00007f731ca9bd72 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#58 0x00007f731ca9bf05 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#59 0x00007f731ca9e065 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#60 0x00007f731f5b1ca5 in kdemain (argc=1, argv=0x7fff279d0ca8) at /home/kde-devel/kde/src/KDE/kdesdk/kate/app/katemain.cpp:250
#61 0x00007f731bc78546 in __libc_start_main () from /lib/libc.so.6
#62 0x0000000000400749 in _start ()

The assert is "oldItem"
---

Looks like a KDEUI bug
Comment 3 Peter Szabados 2009-01-17 09:56:11 UTC
I use the KDE 4.2 RC1 version.

Sorry I can't produce a more complete backtrace.
Comment 4 Dario Andres 2009-05-19 18:29:09 UTC
Proposed patch: http://reviewboard.kde.org/r/717/
Comment 5 Dario Andres 2009-05-20 02:02:36 UTC
SVN commit 970308 by darioandres:

Prevent a crash when opening the editor for shorcuts in another group
different of the one which is currently open.

BUG: 181024


 M  +2 -2      kshortcutseditordelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=970308
Comment 6 Dario Andres 2009-05-20 02:04:32 UTC
SVN commit 970309 by darioandres:

Backport to 4.2branch of:
SVN commit 970308 by darioandres:

Prevent a crash when opening the editor for shorcuts in another group
different of the one which is currently open.

CCBUG: 181024


 M  +2 -2      kshortcutseditordelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=970309