Prevent a crash when opening the editor for shorcuts in another group different of the one which is currently open.

BUG: 181024

svn path=/trunk/KDE/kdelibs/; revision=970308